Modifies style of output divs

--- a/css/styles.css
+++ b/css/styles.css
@@ -107,6 +107,10 @@
     color:#213e47;
     border: 1px solid #075b6f;
     margin: 5px;
+    flex-grow: 1;
+}
+.combined > canvas {
+    flex-grow: 5;
 }
 
 #plasmidInputs {
