Modifies style of output divs

--- a/css/styles.css
+++ b/css/styles.css
@@ -107,6 +107,9 @@
     border: 1px solid #075b6f;
     margin: 5px;
 }
+.combined > div:last-child {
+    width: 800px;
+}
 
 #plasmidInputs {
     display: none;
