--- a/css/forTutorial.css
+++ b/css/forTutorial.css
@@ -1,20 +1,24 @@
+/* Authors : Gina Philipose, Rena Ahn, Zachary Mullen
+CSS File : forTutorial.css
+Last Update : August 29th, 2024 */
+
 * {
     background-color: #c9d6e1;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+/* header */
 .header h1{
     display: inline;
     background-color: #075b6f;
     color: #c9d6e1;
     padding-left: 5px;
 }
-
 .header img {
     padding-left: 15px;
     padding-top: 45px;
     padding-bottom: 0px;
 }
-
 .header, .header img {
     background-color: #075b6f;
     margin-top: -23px;
@@ -32,7 +36,6 @@
             hover {
                 opacity: 0.6;
             }
-            
         }
         h3:hover {
             opacity: 0.5;
@@ -40,40 +43,44 @@
     }
 }
 
-
-.contents {
-    display: flex;
-    flex-grow: 1;
+/* tab buttons */
+.tabs {
+    overflow: hidden;
     background-color: #075b6f;
-    display: inline-block;
-    padding: 10px;
+    b, a, span {
+        overflow: hidden;
+        background-color: #075b6f;
+    }
+}
+.tabs button{
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
     color: #c9d6e1;
-    border: 1px solid #075b6f;
-    h2 {
-        background-color: #075b6f;
+}
+.tabs button:hover {
+    background-color: rgb(33, 72, 83);
+    b, a, span {
+        background-color: rgb(33, 72, 83);
     }
-    button {
-        background-color: #075b6f;
-        color: #c9d6e1;
-        border: 0px;
-        padding: 0px;
-        margin-bottom: -5px;
-        margin-top: -5px;
-        h2 b {
-            background-color: #075b6f;
-            color: #c9d6e1;
-        }
-    }
-    button:hover {
-        opacity: 0.5;
+}
+.tabs button.active {
+    background-color: #213e47;
+    b, span {
+        background-color: #213e47;
     }
 }
 
-.combined {
-    display: flex;
-    align-items: center;
-    border: 1px solid #075b6f;
-}
-.info {
+/* content when displayed */
+.content {
+    display: none;
+    padding: 6px 12px;
+    border-top: none;
     color: #213e47;
+    border: 1px solid #213e47;
 }
