--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,24 @@
+/* Authors : Gina Philipose, Rena Ahn, Zachary Mullen
+CSS File : styles.css
+Last Update : August 29th, 2024 */
+
 * {
     background-color: #c9d6e1;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+/* header */
 .header h1{
     display: inline;
     background-color: #075b6f;
     color: #c9d6e1;
     padding-left: 5px;
 }
-
 .header img {
     padding-left: 15px;
     padding-top: 45px;
     padding-bottom: 0px;
 }
-
 .header, .header img {
     background-color: #075b6f;
     margin-top: -23px;
@@ -32,7 +36,6 @@
             hover {
                 opacity: 0.6;
             }
-            
         }
         h3:hover {
             opacity: 0.5;
@@ -40,15 +43,15 @@
     }
 }
 
+/* input tab buttons */
 .tabs {
     overflow: hidden;
     background-color: #075b6f;
-    b, a {
+    b, a, span {
         overflow: hidden;
         background-color: #075b6f;
     }
 }
-
 .tabs button{
     background-color: inherit;
     float: left;
@@ -60,21 +63,20 @@
     font-size: 17px;
     color: #c9d6e1;
 }
-
 .tabs button:hover {
     background-color: rgb(33, 72, 83);
-    b, a {
+    b, a, span {
         background-color: rgb(33, 72, 83);
     }
 }
-
 .tabs button.active {
     background-color: #213e47;
-    b {
+    b, span {
         background-color: #213e47;
     }
 }
 
+/* content display */
 .content {
     display: none;
     padding: 6px 12px;
@@ -82,10 +84,13 @@
     color: #213e47;
     border: 1px solid #213e47;
 }
+
+/* plasmid inputs */
 #pres {
     display: none;
 }
 
+/* input display */
 .lactoseExterior, .glucose, .lactoseInterior, .lactoseAllo, .promoter, 
 .operator, .repressor, .permease, .betaGal, .CAP, .plasmid {
     display: flex;
@@ -94,7 +99,14 @@
         margin: 0;
     }
 }
+#plasmidInputs {
+    display: none;
+    h2 u {
+        color: #213e47;
+    }
+}
 
+/* input display and graph container */
 .combined {
     display: flex;
     flex-direction: row;
@@ -110,11 +122,4 @@
 .combined > div:last-child {
     width: 1000px;
     margin-left: 10px;
-}
-
-#plasmidInputs {
-    display: none;
-    h2 u {
-        color: #213e47;
-    }
 }
